--- a/website/toc.html
+++ b/website/toc.html
@@ -27,120 +27,180 @@
     <div id="main">
 <div id="toc">
 <ul class="doclist">
-<li><a href="SyntheticComputability.Axioms.CT.html#lab1">Axioms for synthetic computability</a>
-<ul class="doclist">
-<li><a href="SyntheticComputability.Axioms.SCT.html#lab2">Synthetic Church's thesis</a>
+<li><ul class="doclist">
+<li><a href="SyntheticComputability.ArithmeticHierarchy.ArithmeticalHierarchyEquiv.html#lab1">Equivalence of Both Definitions</a>
 
 </li>
 </ul>
 
 </li>
-<li><a href="SyntheticComputability.Axioms.halting.html#lab3">Halting problems</a>
-
-</li>
-<li><a href="SyntheticComputability.CRM.principles.html#lab4">CT in relation to other axioms</a>
+<li><a href="SyntheticComputability.ArithmeticHierarchy.ArithmeticalHierarchySyntactic.html#lab2">Arithmetical Hierarchy</a>
 <ul class="doclist">
-<li><a href="SyntheticComputability.CRM.principles.html#lab5">Provable choice axioms</a>
-
-</li>
-<li><a href="SyntheticComputability.CRM.principles.html#lab6">Extensionality axioms</a>
-
-</li>
-<li><a href="SyntheticComputability.CRM.principles.html#lab7">Classical logical axioms</a>
-
-</li>
-<li><a href="SyntheticComputability.CRM.principles.html#lab8">Axioms of russian constructivism</a>
-
-</li>
-<li><a href="SyntheticComputability.CRM.principles.html#lab9">Choice axioms</a>
-
-</li>
-<li><a href="SyntheticComputability.CRM.principles.html#lab10">Brouwer's intuitionism</a>
-
-</li>
-<li><a href="SyntheticComputability.Shared.FinitenessFacts.html#lab11">Finite types</a>
-
-</li>
-<li><a href="SyntheticComputability.Shared.FinitenessFacts.html#lab12">Infinite types and predicates</a>
+<li><a href="SyntheticComputability.ArithmeticHierarchy.ArithmeticalHierarchySyntactic.html#lab3">Arithmetical Hierarchy in First-Order Arithmetic</a>
 
 </li>
 </ul>
 
 </li>
-<li><a href="SyntheticComputability.Synthetic.DecidabilityFacts.html#lab13">Decidability and Enumerability</a>
+<li><a href="SyntheticComputability.ArithmeticHierarchy.PrenexNormalForm.html#lab4">Prenex Normal Form</a>
+
+</li>
+<li><a href="SyntheticComputability.Axioms.CT.html#lab5">Axioms for synthetic computability</a>
 <ul class="doclist">
-<li><a href="SyntheticComputability.Synthetic.DecidabilityFacts.html#lab14">Decidability</a>
-<ul class="doclist">
-<li><a href="SyntheticComputability.Synthetic.DecidabilityFacts.html#lab15">Discrete types</a>
+<li><a href="SyntheticComputability.Axioms.SCT.html#lab6">Synthetic Church's thesis</a>
 
 </li>
 </ul>
 
 </li>
-<li><a href="SyntheticComputability.Synthetic.EnumerabilityFacts.html#lab16">Enumerability</a>
+<li><a href="SyntheticComputability.Axioms.halting.html#lab7">Halting problems</a>
 <ul class="doclist">
-<li><a href="SyntheticComputability.Synthetic.EnumerabilityFacts.html#lab17">Enumerable types</a>
+<li><a href="SyntheticComputability.CRM.baire_cantor.html#lab8">Continuity</a>
+
+</li>
+<li><a href="SyntheticComputability.CRM.kleenetree.html#lab9">Constructions</a>
 
 </li>
 </ul>
 
 </li>
-<li><a href="SyntheticComputability.Synthetic.ListEnumerabilityFacts.html#lab18">List enumerability</a>
+<li><a href="SyntheticComputability.CRM.kleenetree.html#lab10">Kleene trees</a>
+<ul class="doclist">
+<li><a href="SyntheticComputability.CRM.kleenetree.html#lab11">Omniscience principles as axioms on trees</a>
 
 </li>
-<li><a href="SyntheticComputability.Synthetic.ReducibilityFacts.html#lab19">Definitions</a>
+<li><a href="SyntheticComputability.CRM.kleenetree.html#lab12">WKL</a>
 
 </li>
-<li><a href="SyntheticComputability.Synthetic.ReducibilityFacts.html#lab20">Pre-order properties</a>
-
-</li>
-<li><a href="SyntheticComputability.Synthetic.SemiDecidabilityFacts.html#lab21">Semi-decidability</a>
+<li><a href="SyntheticComputability.CRM.kleenetree.html#lab13">WKL equivalences</a>
 
 </li>
 </ul>
 
 </li>
-<li><a href="SyntheticComputability.Synthetic.reductions.html#lab22">Reducibility</a>
+<li><a href="SyntheticComputability.CRM.principles.html#lab14">CT in relation to other axioms</a>
 <ul class="doclist">
-<li><a href="SyntheticComputability.Synthetic.reductions.html#lab23">Many-one reducibility</a>
+<li><a href="SyntheticComputability.CRM.principles.html#lab15">Provable choice axioms</a>
 
 </li>
-<li><a href="SyntheticComputability.Synthetic.reductions.html#lab24">One-one reducibility</a>
+<li><a href="SyntheticComputability.CRM.principles.html#lab16">Extensionality axioms</a>
 
 </li>
-<li><a href="SyntheticComputability.Synthetic.reductions.html#lab25">Truth-table reducibility</a>
+<li><a href="SyntheticComputability.CRM.principles.html#lab17">Classical logical axioms</a>
 
 </li>
-<li><a href="SyntheticComputability.Synthetic.reductions.html#lab26">Total Turing reducibility</a>
+<li><a href="SyntheticComputability.CRM.principles.html#lab18">Axioms of russian constructivism</a>
 
 </li>
-<li><a href="SyntheticComputability.TuringReducibility.OracleComputability.html#lab27">Extensional dialogue trees</a>
+<li><a href="SyntheticComputability.CRM.principles.html#lab19">Choice axioms</a>
 
 </li>
-<li><a href="SyntheticComputability.TuringReducibility.OracleComputability.html#lab28">Oracle Functionals and Turing Reducibility</a>
+<li><a href="SyntheticComputability.CRM.principles.html#lab20">Brouwer's intuitionism</a>
 
 </li>
-<li><a href="SyntheticComputability.TuringReducibility.OracleComputability.html#lab29">Lemmas about extensional dialogue trees</a>
-<ul class="doclist">
-<li><a href="SyntheticComputability.TuringReducibility.OracleComputability.html#lab30">Interrogations with accumulator argument E</a>
-
-</li>
-<li><a href="SyntheticComputability.TuringReducibility.OracleComputability.html#lab31">Stalling interrogations with silent steps</a>
+<li><a href="SyntheticComputability.PostsTheorem.ArithmeticalHierarchySemantic.html#lab21">Arithmetical Hierarchy in Type Theory</a>
 
 </li>
 </ul>
 
 </li>
-<li><a href="SyntheticComputability.TuringReducibility.OracleComputability.html#lab32">Trees give rise to partial functions</a>
+<li><a href="SyntheticComputability.PostsTheorem.KleenePostTheorem.html#lab22">Kleene-Post Theorem</a>
 
 </li>
-<li><a href="SyntheticComputability.TuringReducibility.OracleComputability.html#lab33">Closure properties of Oracle computability</a>
+<li><a href="SyntheticComputability.PostsTheorem.PostsTheorem.html#lab23">Post's Theorem</a>
 
 </li>
-<li><a href="SyntheticComputability.TuringReducibility.OracleComputability.html#lab34">Lemmas about Turing reducibility</a>
+<li><a href="SyntheticComputability.PostsTheorem.TuringJump.html#lab24">Turing Jump</a>
+<ul class="doclist">
+<li><a href="SyntheticComputability.PostsTheorem.TuringJump.html#lab25">Enumerating Oracle Machines</a>
 
 </li>
-<li><a href="SyntheticComputability.TuringReducibility.OracleComputability.html#lab35">Central results regarding Turing reducibility</a>
+<li><a href="SyntheticComputability.PostsTheorem.TuringJump.html#lab26">Synthetic Turing Jump</a>
+
+</li>
+<li><a href="SyntheticComputability.Shared.FinitenessFacts.html#lab27">Finite types</a>
+
+</li>
+<li><a href="SyntheticComputability.Shared.FinitenessFacts.html#lab28">Infinite types and predicates</a>
+
+</li>
+</ul>
+
+</li>
+<li><a href="SyntheticComputability.Synthetic.DecidabilityFacts.html#lab29">Decidability and Enumerability</a>
+<ul class="doclist">
+<li><a href="SyntheticComputability.Synthetic.DecidabilityFacts.html#lab30">Decidability</a>
+<ul class="doclist">
+<li><a href="SyntheticComputability.Synthetic.DecidabilityFacts.html#lab31">Discrete types</a>
+
+</li>
+</ul>
+
+</li>
+<li><a href="SyntheticComputability.Synthetic.EnumerabilityFacts.html#lab32">Enumerability</a>
+<ul class="doclist">
+<li><a href="SyntheticComputability.Synthetic.EnumerabilityFacts.html#lab33">Enumerable types</a>
+
+</li>
+</ul>
+
+</li>
+<li><a href="SyntheticComputability.Synthetic.ListEnumerabilityFacts.html#lab34">List enumerability</a>
+
+</li>
+<li><a href="SyntheticComputability.Synthetic.ReducibilityFacts.html#lab35">Definitions</a>
+
+</li>
+<li><a href="SyntheticComputability.Synthetic.ReducibilityFacts.html#lab36">Pre-order properties</a>
+
+</li>
+<li><a href="SyntheticComputability.Synthetic.SemiDecidabilityFacts.html#lab37">Semi-decidability</a>
+
+</li>
+</ul>
+
+</li>
+<li><a href="SyntheticComputability.Synthetic.reductions.html#lab38">Reducibility</a>
+<ul class="doclist">
+<li><a href="SyntheticComputability.Synthetic.reductions.html#lab39">Many-one reducibility</a>
+
+</li>
+<li><a href="SyntheticComputability.Synthetic.reductions.html#lab40">One-one reducibility</a>
+
+</li>
+<li><a href="SyntheticComputability.Synthetic.reductions.html#lab41">Truth-table reducibility</a>
+
+</li>
+<li><a href="SyntheticComputability.Synthetic.reductions.html#lab42">Total Turing reducibility</a>
+
+</li>
+<li><a href="SyntheticComputability.TuringReducibility.OracleComputability.html#lab43">Extensional dialogue trees</a>
+
+</li>
+<li><a href="SyntheticComputability.TuringReducibility.OracleComputability.html#lab44">Oracle Functionals and Turing Reducibility</a>
+
+</li>
+<li><a href="SyntheticComputability.TuringReducibility.OracleComputability.html#lab45">Lemmas about extensional dialogue trees</a>
+<ul class="doclist">
+<li><a href="SyntheticComputability.TuringReducibility.OracleComputability.html#lab46">Interrogations with accumulator argument E</a>
+
+</li>
+<li><a href="SyntheticComputability.TuringReducibility.OracleComputability.html#lab47">Stalling interrogations with silent steps</a>
+
+</li>
+</ul>
+
+</li>
+<li><a href="SyntheticComputability.TuringReducibility.OracleComputability.html#lab48">Trees give rise to partial functions</a>
+
+</li>
+<li><a href="SyntheticComputability.TuringReducibility.OracleComputability.html#lab49">Closure properties of Oracle computability</a>
+
+</li>
+<li><a href="SyntheticComputability.TuringReducibility.OracleComputability.html#lab50">Lemmas about Turing reducibility</a>
+
+</li>
+<li><a href="SyntheticComputability.TuringReducibility.OracleComputability.html#lab51">Central results regarding Turing reducibility</a>
 
 </li>
 </ul>
