--- a/oracle-computability/SyntheticComputability.Shared.Libs.PSL.Lists.Dupfree.html
+++ b/oracle-computability/SyntheticComputability.Shared.Libs.PSL.Lists.Dupfree.html
@@ -25,12 +25,11 @@
 </div>
     <div id="content" tabindex="-1" onblur="document.getElementById('content').focus()">
     <div id="main">
-<h1 class="libtitle">Library SyntheticComputability.Shared.Libs.PSL.Lists.Dupfree</h1>
-
 <div class="code">
 <span class="id" title="keyword">From</span> <span class="id" title="var">SyntheticComputability.Shared.Libs.PSL</span> <span class="id" title="keyword">Require</span> <span class="id" title="keyword">Export</span> <a class="idref" href="SyntheticComputability.Shared.Libs.PSL.Lists.BaseLists.html#"><span class="id" title="library">BaseLists</span></a> <a class="idref" href="SyntheticComputability.Shared.Libs.PSL.Lists.Filter.html#"><span class="id" title="library">Filter</span></a> <a class="idref" href="SyntheticComputability.Shared.Libs.PSL.Lists.Cardinality.html#"><span class="id" title="library">Lists.Cardinality</span></a>.<br/>
 
 <br/>
+<span class="comment">(*&nbsp;***&nbsp;Duplicate-free&nbsp;lists&nbsp;*)</span><br/>
 
 <br/>
 <span class="id" title="keyword">Inductive</span> <a id="dupfree" class="idref" href="#dupfree"><span class="id" title="inductive">dupfree</span></a> (<a id="X:1" class="idref" href="#X:1"><span class="id" title="binder">X</span></a> : <span class="id" title="keyword">Type</span>) : <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Datatypes.html#list"><span class="id" title="inductive">list</span></a> <span class="id" title="var">X</span> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Logic.html#::type_scope:x_'-&gt;'_x"><span class="id" title="notation">-&gt;</span></a> <span class="id" title="keyword">Prop</span> :=<br/>
