--- a/oracle-computability/SyntheticComputability.Shared.mu_nat.html
+++ b/oracle-computability/SyntheticComputability.Shared.mu_nat.html
@@ -25,8 +25,6 @@
 </div>
     <div id="content" tabindex="-1" onblur="document.getElementById('content').focus()">
     <div id="main">
-<h1 class="libtitle">Library SyntheticComputability.Shared.mu_nat</h1>
-
 <div class="code">
 
 <br/>
@@ -42,6 +40,7 @@
 &nbsp;&nbsp;<span class="id" title="keyword">Variable</span> <a id="WO.f" class="idref" href="#WO.f"><span class="id" title="variable">f</span></a>: <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Datatypes.html#nat"><span class="id" title="inductive">nat</span></a> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Logic.html#::type_scope:x_'-&gt;'_x"><span class="id" title="notation">-&gt;</span></a> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Datatypes.html#bool"><span class="id" title="inductive">bool</span></a>.<br/>
 
 <br/>
+&nbsp;&nbsp;<span class="comment">(*&nbsp;Guardedness&nbsp;predicate&nbsp;*)</span><br/>
 &nbsp;&nbsp;<span class="id" title="keyword">Inductive</span> <a id="G" class="idref" href="#G"><span class="id" title="inductive">G</span></a> (<a id="n:6" class="idref" href="#n:6"><span class="id" title="binder">n</span></a>: <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Datatypes.html#nat"><span class="id" title="inductive">nat</span></a>) : <span class="id" title="keyword">Prop</span> :=<br/>
 &nbsp;&nbsp;| <a id="GI" class="idref" href="#GI"><span class="id" title="constructor">GI</span></a> : <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Logic.html#::type_scope:x_'-&gt;'_x"><span class="id" title="notation">(</span></a><a class="idref" href="SyntheticComputability.Shared.mu_nat.html#WO.f"><span class="id" title="variable">f</span></a> <a class="idref" href="SyntheticComputability.Shared.mu_nat.html#n:6"><span class="id" title="variable">n</span></a> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Logic.html#6cd0f7b28b6092304087c7049437bb1a"><span class="id" title="notation">=</span></a> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Datatypes.html#false"><span class="id" title="constructor">false</span></a> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Logic.html#::type_scope:x_'-&gt;'_x"><span class="id" title="notation">-&gt;</span></a> <a class="idref" href="SyntheticComputability.Shared.mu_nat.html#G:7"><span class="id" title="inductive">G</span></a> (<a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Datatypes.html#S"><span class="id" title="constructor">S</span></a> <a class="idref" href="SyntheticComputability.Shared.mu_nat.html#n:6"><span class="id" title="variable">n</span></a>)<a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Logic.html#::type_scope:x_'-&gt;'_x"><span class="id" title="notation">)</span></a> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Logic.html#::type_scope:x_'-&gt;'_x"><span class="id" title="notation">-&gt;</span></a> <a class="idref" href="SyntheticComputability.Shared.mu_nat.html#G:7"><span class="id" title="inductive">G</span></a> <a class="idref" href="SyntheticComputability.Shared.mu_nat.html#n:6"><span class="id" title="variable">n</span></a>.<br/>
 
