--- a/oracle-computability/SyntheticComputability.Synthetic.MoreEnumerabilityFacts.html
+++ b/oracle-computability/SyntheticComputability.Synthetic.MoreEnumerabilityFacts.html
@@ -25,8 +25,6 @@
 </div>
     <div id="content" tabindex="-1" onblur="document.getElementById('content').focus()">
     <div id="main">
-<h1 class="libtitle">Library SyntheticComputability.Synthetic.MoreEnumerabilityFacts</h1>
-
 <div class="code">
 <span class="id" title="keyword">From</span> <span class="id" title="var">SyntheticComputability.Synthetic</span> <span class="id" title="keyword">Require</span> <span class="id" title="keyword">Import</span> <a class="idref" href="SyntheticComputability.Synthetic.DecidabilityFacts.html#"><span class="id" title="library">DecidabilityFacts</span></a> <a class="idref" href="SyntheticComputability.Synthetic.EnumerabilityFacts.html#"><span class="id" title="library">EnumerabilityFacts</span></a> <a class="idref" href="SyntheticComputability.Synthetic.ListEnumerabilityFacts.html#"><span class="id" title="library">ListEnumerabilityFacts</span></a>.<br/>
 <span class="id" title="keyword">From</span> <span class="id" title="var">SyntheticComputability.Shared</span> <span class="id" title="keyword">Require</span> <span class="id" title="keyword">Import</span> <a class="idref" href="SyntheticComputability.Shared.ListAutomation.html#"><span class="id" title="library">ListAutomation</span></a> <a class="idref" href="SyntheticComputability.Shared.Dec.html#"><span class="id" title="library">Dec</span></a>.<br/>
@@ -149,6 +147,7 @@
 <br/>
 <span class="id" title="keyword">Set Implicit Arguments</span>.<br/>
 <span class="id" title="keyword">Unset</span> <span class="id" title="keyword">Strict</span> <span class="id" title="keyword">Implicit</span>.<br/>
+<span class="comment">(*&nbsp;**&nbsp;Definition&nbsp;of&nbsp;infinite&nbsp;and&nbsp;generating&nbsp;types&nbsp;*)</span><br/>
 
 <br/>
 <span class="id" title="keyword">Definition</span> <a id="injective" class="idref" href="#injective"><span class="id" title="definition">injective</span></a> <a id="X:68" class="idref" href="#X:68"><span class="id" title="binder">X</span></a> <a id="Y:69" class="idref" href="#Y:69"><span class="id" title="binder">Y</span></a> (<a id="f:70" class="idref" href="#f:70"><span class="id" title="binder">f</span></a> : <a class="idref" href="SyntheticComputability.Synthetic.MoreEnumerabilityFacts.html#X:68"><span class="id" title="variable">X</span></a> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Logic.html#::type_scope:x_'-&gt;'_x"><span class="id" title="notation">-&gt;</span></a> <a class="idref" href="SyntheticComputability.Synthetic.MoreEnumerabilityFacts.html#Y:69"><span class="id" title="variable">Y</span></a>) :=<br/>
@@ -285,6 +284,7 @@
 &nbsp;&nbsp;<span class="id" title="keyword">Qed</span>.<br/>
 
 <br/>
+&nbsp;&nbsp;<span class="comment">(*&nbsp;**&nbsp;Generating&nbsp;data&nbsp;types&nbsp;are&nbsp;in&nbsp;bijection&nbsp;to&nbsp;nat&nbsp;*)</span><br/>
 
 <br/>
 &nbsp;&nbsp;<span class="id" title="keyword">Lemma</span> <a id="LL_f" class="idref" href="#LL_f"><span class="id" title="lemma">LL_f</span></a> <a id="n:114" class="idref" href="#n:114"><span class="id" title="binder">n</span></a> <a id="x:115" class="idref" href="#x:115"><span class="id" title="binder">x</span></a> :<br/>
