--- a/oracle-computability/SyntheticComputability.ArithmeticHierarchy.Arithmetics.html
+++ b/oracle-computability/SyntheticComputability.ArithmeticHierarchy.Arithmetics.html
@@ -25,8 +25,6 @@
 </div>
     <div id="content" tabindex="-1" onblur="document.getElementById('content').focus()">
     <div id="main">
-<h1 class="libtitle">Library SyntheticComputability.ArithmeticHierarchy.Arithmetics</h1>
-
 <div class="code">
 <span class="id" title="keyword">From</span> <span class="id" title="var">Undecidability.FOL</span> <span class="id" title="keyword">Require</span> <span class="id" title="keyword">Export</span> <span class="id" title="library">Facts</span>.<br/>
 <span class="id" title="keyword">From</span> <span class="id" title="var">Undecidability.FOL</span> <span class="id" title="keyword">Require</span> <span class="id" title="keyword">Export</span> <span class="id" title="library">FullFacts</span>.<br/>
@@ -36,6 +34,7 @@
 <span class="id" title="keyword">Require</span> <span class="id" title="keyword">Import</span> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Lists.List.html#"><span class="id" title="library">List</span></a>.<br/>
 
 <br/>
+<span class="comment">(*&nbsp;**&nbsp;Signature&nbsp;for&nbsp;PA&nbsp;axiomatisation,&nbsp;containing&nbsp;function&nbsp;symbols&nbsp;for&nbsp;set&nbsp;operations&nbsp;*)</span><br/>
 
 <br/>
 <span class="id" title="keyword">Inductive</span> <a id="PA_funcs" class="idref" href="#PA_funcs"><span class="id" title="inductive">PA_funcs</span></a> : <span class="id" title="keyword">Type</span> :=<br/>
