--- a/oracle-computability/SyntheticComputability.Models.Computability.html
+++ b/oracle-computability/SyntheticComputability.Models.Computability.html
@@ -25,8 +25,6 @@
 </div>
     <div id="content" tabindex="-1" onblur="document.getElementById('content').focus()">
     <div id="main">
-<h1 class="libtitle">Library SyntheticComputability.Models.Computability</h1>
-
 <div class="code">
 <span class="id" title="keyword">From</span> <span class="id" title="var">Undecidability.L</span> <span class="id" title="keyword">Require</span> <span class="id" title="keyword">Export</span> <span class="id" title="library">L</span> <span class="id" title="library">Datatypes.LNat</span> <span class="id" title="library">Datatypes.LBool</span> <span class="id" title="library">Functions.Encoding</span>.<br/>
 <span class="id" title="keyword">From</span> <span class="id" title="var">SyntheticComputability</span> <span class="id" title="keyword">Require</span> <span class="id" title="keyword">Export</span> <a class="idref" href="SyntheticComputability.Models.Seval.html#"><span class="id" title="library">Models.Seval</span></a>.<br/>
@@ -90,6 +88,17 @@
 <span class="id" title="keyword">Arguments</span> <a class="idref" href="SyntheticComputability.Models.Computability.html#lcomp_comp"><span class="id" title="lemma">lcomp_comp</span></a> <span class="id" title="var">_</span>{<span class="id" title="var">_</span>} <span class="id" title="var">_</span> {<span class="id" title="var">_</span>} <span class="id" title="var">_</span> <span class="id" title="var">_</span>.<br/>
 
 <br/>
+<span class="comment">(*<br/>
+Lemma&nbsp;ldec_dec&nbsp;P&nbsp;u:&nbsp;decides&nbsp;u&nbsp;P&nbsp;-&gt;&nbsp;forall&nbsp;s,&nbsp;dec(P&nbsp;s).<br/>
+Proof.<br/>
+&nbsp;&nbsp;intros&nbsp;H&nbsp;s.&nbsp;specialize&nbsp;(H&nbsp;s).&nbsp;<br/>
+&nbsp;&nbsp;assert&nbsp;(exists&nbsp;(b:bool),&nbsp;u&nbsp;(enc&nbsp;s)&nbsp;==&nbsp;enc&nbsp;b).&nbsp;destruct&nbsp;H&nbsp;as&nbsp;<span class="inlinecode">?</span> <span class="inlinecode">[<span class="id" title="var">H'</span></span> <span class="inlinecode"><span class="id" title="var">_</span>]</span>.&nbsp;exists&nbsp;x.&nbsp;assumption.<br/>
+&nbsp;&nbsp;eapply&nbsp;lcomp_comp&nbsp;in&nbsp;H0.&nbsp;destruct&nbsp;H0&nbsp;as&nbsp;<span class="inlinecode">[|]</span> <span class="inlinecode"><span class="id" title="var">H0</span></span>.<br/>
+&nbsp;&nbsp;-left.&nbsp;destruct&nbsp;H&nbsp;as&nbsp;<span class="inlinecode"><span class="id" title="var">b</span></span> <span class="inlinecode">[<span class="id" title="var">eq</span></span> <span class="inlinecode"><span class="id" title="var">R</span>]</span>.&nbsp;rewrite&nbsp;eq&nbsp;in&nbsp;H0.&nbsp;apply&nbsp;enc_extinj&nbsp;in&nbsp;H0.&nbsp;now&nbsp;subst.<br/>
+&nbsp;&nbsp;-right.&nbsp;destruct&nbsp;H&nbsp;as&nbsp;<span class="inlinecode"><span class="id" title="var">b</span></span> <span class="inlinecode">[<span class="id" title="var">eq</span></span> <span class="inlinecode"><span class="id" title="var">R</span>]</span>.&nbsp;rewrite&nbsp;eq&nbsp;in&nbsp;H0.&nbsp;apply&nbsp;enc_extinj&nbsp;in&nbsp;H0.&nbsp;now&nbsp;subst.<br/>
+&nbsp;&nbsp;-exact&nbsp;bool_enc_inv_correct.<br/>
+Qed.<br/>
+*)</span><br/>
 </div>
 </div>
 <div id="footer">
