--- a/oracle-computability/SyntheticComputability.PostsTheorem.KleenePostTheorem.html
+++ b/oracle-computability/SyntheticComputability.PostsTheorem.KleenePostTheorem.html
@@ -25,8 +25,6 @@
 </div>
     <div id="content" tabindex="-1" onblur="document.getElementById('content').focus()">
     <div id="main">
-<h1 class="libtitle">Library SyntheticComputability.PostsTheorem.KleenePostTheorem</h1>
-
 <div class="code">
 </div>
 
@@ -45,6 +43,7 @@
 <span class="id" title="keyword">Section</span> <a id="Part" class="idref" href="#Part"><span class="id" title="section">Part</span></a>.<br/>
 
 <br/>
+<span class="comment">(*&nbsp;Assumptions&nbsp;*)</span><br/>
 
 <br/>
 <span class="id" title="keyword">Context</span> {<a id="Part:1" class="idref" href="#Part:1"><span class="id" title="binder">Part</span></a> : <a class="idref" href="SyntheticComputability.Shared.partial.html#partiality"><span class="id" title="class">partiality</span></a>}.<br/>
@@ -87,6 +86,7 @@
 <span class="id" title="keyword">Qed</span>.<br/>
 
 <br/>
+<span class="comment">(*&nbsp;Prelims&nbsp;*)</span><br/>
 
 <br/>
 <span class="id" title="keyword">Lemma</span> <a id="lenum_inj" class="idref" href="#lenum_inj"><span class="id" title="lemma">lenum_inj</span></a> <a id="s:30" class="idref" href="#s:30"><span class="id" title="binder">s</span></a> <a id="t:31" class="idref" href="#t:31"><span class="id" title="binder">t</span></a> :<br/>
@@ -173,6 +173,7 @@
 <span class="id" title="keyword">Qed</span>.<br/>
 
 <br/>
+<span class="comment">(*&nbsp;Degree&nbsp;construction&nbsp;*)</span><br/>
 
 <br/>
 <span class="id" title="keyword">Inductive</span> <a id="sigtau" class="idref" href="#sigtau"><span class="id" title="inductive">sigtau</span></a> : <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Datatypes.html#nat"><span class="id" title="inductive">nat</span></a> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Logic.html#::type_scope:x_'-&gt;'_x"><span class="id" title="notation">-&gt;</span></a> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Datatypes.html#list"><span class="id" title="inductive">list</span></a> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Datatypes.html#bool"><span class="id" title="inductive">bool</span></a> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Logic.html#::type_scope:x_'-&gt;'_x"><span class="id" title="notation">-&gt;</span></a> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Datatypes.html#list"><span class="id" title="inductive">list</span></a> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Datatypes.html#bool"><span class="id" title="inductive">bool</span></a> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Logic.html#::type_scope:x_'-&gt;'_x"><span class="id" title="notation">-&gt;</span></a> <span class="id" title="keyword">Prop</span> :=<br/>
@@ -203,6 +204,7 @@
 &nbsp;&nbsp;<a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Logic.html#a883bdd010993579f99d60b3775bcf54"><span class="id" title="notation">exists</span></a> <a id="k:85" class="idref" href="#k:85"><span class="id" title="binder">k</span></a><a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Logic.html#a883bdd010993579f99d60b3775bcf54"><span class="id" title="notation">,</span></a> <span class="id" title="keyword">forall</span> <a id="s:86" class="idref" href="#s:86"><span class="id" title="binder">s</span></a> <a id="t:87" class="idref" href="#t:87"><span class="id" title="binder">t</span></a>, <a class="idref" href="SyntheticComputability.PostsTheorem.KleenePostTheorem.html#sigtau"><span class="id" title="inductive">sigtau</span></a> <a class="idref" href="SyntheticComputability.PostsTheorem.KleenePostTheorem.html#k:85"><span class="id" title="variable">k</span></a> <a class="idref" href="SyntheticComputability.PostsTheorem.KleenePostTheorem.html#s:86"><span class="id" title="variable">s</span></a> <a class="idref" href="SyntheticComputability.PostsTheorem.KleenePostTheorem.html#t:87"><span class="id" title="variable">t</span></a> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Logic.html#::type_scope:x_'-&gt;'_x"><span class="id" title="notation">-&gt;</span></a> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Lists.List.html#nth_error"><span class="id" title="definition">nth_error</span></a> <a class="idref" href="SyntheticComputability.PostsTheorem.KleenePostTheorem.html#t:87"><span class="id" title="variable">t</span></a> <a class="idref" href="SyntheticComputability.PostsTheorem.KleenePostTheorem.html#n:84"><span class="id" title="variable">n</span></a> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Logic.html#6cd0f7b28b6092304087c7049437bb1a"><span class="id" title="notation">=</span></a> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Datatypes.html#Some"><span class="id" title="constructor">Some</span></a> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Datatypes.html#true"><span class="id" title="constructor">true</span></a>.<br/>
 
 <br/>
+<span class="comment">(*&nbsp;Properties&nbsp;of&nbsp;sigtau:&nbsp;functionality,&nbsp;totality,&nbsp;cumulativity,&nbsp;agreement,&nbsp;unboundedness&nbsp;*)</span><br/>
 
 <br/>
 <span class="id" title="keyword">Lemma</span> <a id="sigtau_fun" class="idref" href="#sigtau_fun"><span class="id" title="lemma">sigtau_fun</span></a> <a id="n:88" class="idref" href="#n:88"><span class="id" title="binder">n</span></a> <a id="sigma:89" class="idref" href="#sigma:89"><span class="id" title="binder">sigma</span></a> <a id="tau:90" class="idref" href="#tau:90"><span class="id" title="binder">tau</span></a> <a id="sig':91" class="idref" href="#sig':91"><span class="id" title="binder">sig'</span></a> <a id="tau':92" class="idref" href="#tau':92"><span class="id" title="binder">tau'</span></a> :<br/>
@@ -374,6 +376,7 @@
 <span class="id" title="keyword">Qed</span>.<br/>
 
 <br/>
+<span class="comment">(*&nbsp;Obtained&nbsp;functional&nbsp;relations&nbsp;*)</span><br/>
 
 <br/>
 <span class="id" title="keyword">Definition</span> <a id="sigmas" class="idref" href="#sigmas"><span class="id" title="definition">sigmas</span></a> (<a id="n:166" class="idref" href="#n:166"><span class="id" title="binder">n</span></a> : <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Datatypes.html#nat"><span class="id" title="inductive">nat</span></a>) : <a class="idref" href="SyntheticComputability.Shared.partial.html#FunRel"><span class="id" title="record">FunRel</span></a> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Datatypes.html#nat"><span class="id" title="inductive">nat</span></a> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Datatypes.html#bool"><span class="id" title="inductive">bool</span></a>.<br/>
@@ -414,6 +417,7 @@
 <span class="id" title="keyword">Qed</span>.<br/>
 
 <br/>
+<span class="comment">(*&nbsp;Simple&nbsp;properties&nbsp;of&nbsp;degrees&nbsp;A&nbsp;and&nbsp;B&nbsp;*)</span><br/>
 
 <br/>
 <span class="id" title="keyword">Lemma</span> <a id="A_sigmas" class="idref" href="#A_sigmas"><span class="id" title="lemma">A_sigmas</span></a> <a id="n:190" class="idref" href="#n:190"><span class="id" title="binder">n</span></a> <a id="sigma:191" class="idref" href="#sigma:191"><span class="id" title="binder">sigma</span></a> <a id="tau:192" class="idref" href="#tau:192"><span class="id" title="binder">tau</span></a> :<br/>
@@ -470,6 +474,7 @@
 <span class="id" title="keyword">Qed</span>.<br/>
 
 <br/>
+<span class="comment">(*&nbsp;Remaining&nbsp;verification&nbsp;using&nbsp;continuity&nbsp;*)</span><br/>
 
 <br/>
 <span class="id" title="keyword">Lemma</span> <a id="A_agree" class="idref" href="#A_agree"><span class="id" title="lemma">A_agree</span></a> <a id="N:200" class="idref" href="#N:200"><span class="id" title="binder">N</span></a> <a id="k:201" class="idref" href="#k:201"><span class="id" title="binder">k</span></a> <a id="n:202" class="idref" href="#n:202"><span class="id" title="binder">n</span></a> <a id="b:203" class="idref" href="#b:203"><span class="id" title="binder">b</span></a> :<br/>
@@ -606,6 +611,7 @@
 <span class="id" title="keyword">Qed</span>.<br/>
 
 <br/>
+<span class="comment">(*&nbsp;Main&nbsp;result&nbsp;*)</span><br/>
 
 <br/>
 <span class="id" title="keyword">Theorem</span> <a id="KleenePost" class="idref" href="#KleenePost"><span class="id" title="lemma">KleenePost</span></a> :<br/>
