--- a/oracle-computability/SyntheticComputability.ReducibilityDegrees.hypersimple_construction.html
+++ b/oracle-computability/SyntheticComputability.ReducibilityDegrees.hypersimple_construction.html
@@ -25,8 +25,6 @@
 </div>
     <div id="content" tabindex="-1" onblur="document.getElementById('content').focus()">
     <div id="main">
-<h1 class="libtitle">Library SyntheticComputability.ReducibilityDegrees.hypersimple_construction</h1>
-
 <div class="code">
 <span class="id" title="keyword">From</span> <span class="id" title="var">SyntheticComputability</span> <span class="id" title="keyword">Require</span> <span class="id" title="keyword">Import</span> <a class="idref" href="SyntheticComputability.ReducibilityDegrees.simple_construction.html#"><span class="id" title="library">simple_construction</span></a> <a class="idref" href="SyntheticComputability.ReducibilityDegrees.hypersimple.html#"><span class="id" title="library">hypersimple</span></a> <a class="idref" href="SyntheticComputability.Axioms.EA.html#"><span class="id" title="library">Axioms.EA</span></a>.<br/>
 
@@ -121,6 +119,7 @@
 &nbsp;&nbsp;<span class="id" title="keyword">Definition</span> <a id="HS" class="idref" href="#HS"><span class="id" title="definition">HS</span></a> <a id="x:24" class="idref" href="#x:24"><span class="id" title="binder">x</span></a> := <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Logic.html#a883bdd010993579f99d60b3775bcf54"><span class="id" title="notation">exists</span></a> <a id="y:25" class="idref" href="#y:25"><span class="id" title="binder">y</span></a><a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Logic.html#a883bdd010993579f99d60b3775bcf54"><span class="id" title="notation">,</span></a> <a class="idref" href="SyntheticComputability.ReducibilityDegrees.hypersimple_construction.html#x:24"><span class="id" title="variable">x</span></a> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Peano.html#::nat_scope:x_'&lt;'_x"><span class="id" title="notation">&lt;</span></a> <a class="idref" href="SyntheticComputability.ReducibilityDegrees.hypersimple_construction.html#y:25"><span class="id" title="variable">y</span></a> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Logic.html#ba2b0e492d2b4675a0acf3ea92aabadd"><span class="id" title="notation">/\</span></a> <a class="idref" href="SyntheticComputability.ReducibilityDegrees.hypersimple_construction.html#HS.E_I"><span class="id" title="variable">E_I</span></a> <a class="idref" href="SyntheticComputability.ReducibilityDegrees.hypersimple_construction.html#y:25"><span class="id" title="variable">y</span></a> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Peano.html#::nat_scope:x_'&lt;'_x"><span class="id" title="notation">&lt;</span></a> <a class="idref" href="SyntheticComputability.ReducibilityDegrees.hypersimple_construction.html#HS.E_I"><span class="id" title="variable">E_I</span></a> <a class="idref" href="SyntheticComputability.ReducibilityDegrees.hypersimple_construction.html#x:24"><span class="id" title="variable">x</span></a>.<br/>
 
 <br/>
+&nbsp;&nbsp;<span class="comment">(*&nbsp;Proving&nbsp;HS&nbsp;to&nbsp;be&nbsp;undecidable&nbsp;via&nbsp;decidable&nbsp;HS&nbsp;-&gt;&nbsp;decidable&nbsp;W&nbsp;*)</span><br/>
 
 <br/>
 &nbsp;&nbsp;<span class="id" title="keyword">Definition</span> <a id="boundable" class="idref" href="#boundable"><span class="id" title="definition">boundable</span></a> <a id="n:26" class="idref" href="#n:26"><span class="id" title="binder">n</span></a>: <span class="id" title="keyword">Type</span><br/>
@@ -260,6 +259,7 @@
 &nbsp;&nbsp;<span class="id" title="keyword">Qed</span>.<br/>
 
 <br/>
+&nbsp;&nbsp;<span class="comment">(*&nbsp;Proving&nbsp;HS&nbsp;to&nbsp;be&nbsp;hypersimple&nbsp;*)</span><br/>
 
 <br/>
 &nbsp;&nbsp;<span class="id" title="keyword">Lemma</span> <a id="HS_enumerable" class="idref" href="#HS_enumerable"><span class="id" title="lemma">HS_enumerable</span></a>:<br/>
