--- a/oracle-computability/SyntheticComputability.Shared.FilterFacts.html
+++ b/oracle-computability/SyntheticComputability.Shared.FilterFacts.html
@@ -25,12 +25,11 @@
 </div>
     <div id="content" tabindex="-1" onblur="document.getElementById('content').focus()">
     <div id="main">
-<h1 class="libtitle">Library SyntheticComputability.Shared.FilterFacts</h1>
-
 <div class="code">
 <span class="id" title="keyword">Require</span> <span class="id" title="keyword">Import</span> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Lists.List.html#"><span class="id" title="library">List</span></a>.<br/>
 
 <br/>
+<span class="comment">(*&nbsp;Filter&nbsp;*)</span><br/>
 
 <br/>
 <span class="id" title="keyword">Section</span> <a id="Filter" class="idref" href="#Filter"><span class="id" title="section">Filter</span></a>.<br/>
