--- a/oracle-computability/SyntheticComputability.Shared.Libs.PSL.EqDec.html
+++ b/oracle-computability/SyntheticComputability.Shared.Libs.PSL.EqDec.html
@@ -25,12 +25,11 @@
 </div>
     <div id="content" tabindex="-1" onblur="document.getElementById('content').focus()">
     <div id="main">
-<h1 class="libtitle">Library SyntheticComputability.Shared.Libs.PSL.EqDec</h1>
-
 <div class="code">
 <span class="id" title="keyword">From</span> <span class="id" title="var">SyntheticComputability.Shared.Libs.PSL</span> <span class="id" title="keyword">Require</span> <span class="id" title="keyword">Import</span> <a class="idref" href="SyntheticComputability.Shared.Libs.PSL.Prelim.html#"><span class="id" title="library">Prelim</span></a>.<br/>
 
 <br/>
+<span class="comment">(*&nbsp;*&nbsp;Decidable&nbsp;predicates&nbsp;*)</span><br/>
 
 <br/>
 <span class="id" title="keyword">Definition</span> <a id="dec" class="idref" href="#dec"><span class="id" title="definition">dec</span></a> (<a id="X:1" class="idref" href="#X:1"><span class="id" title="binder">X</span></a>: <span class="id" title="keyword">Prop</span>) : <span class="id" title="keyword">Type</span> := <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Specif.html#87727981cdc1579fef00b9d9c1d3b9da"><span class="id" title="notation">{</span></a><a class="idref" href="SyntheticComputability.Shared.Libs.PSL.EqDec.html#X:1"><span class="id" title="variable">X</span></a><a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Specif.html#87727981cdc1579fef00b9d9c1d3b9da"><span class="id" title="notation">}</span></a> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Specif.html#87727981cdc1579fef00b9d9c1d3b9da"><span class="id" title="notation">+</span></a> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Specif.html#87727981cdc1579fef00b9d9c1d3b9da"><span class="id" title="notation">{</span></a><a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Logic.html#63a68285c81db8f9bc456233bb9ed181"><span class="id" title="notation">~</span></a> <a class="idref" href="SyntheticComputability.Shared.Libs.PSL.EqDec.html#X:1"><span class="id" title="variable">X</span></a><a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Specif.html#87727981cdc1579fef00b9d9c1d3b9da"><span class="id" title="notation">}</span></a>.<br/>
@@ -78,7 +77,7 @@
 
 <br/>
 <span class="id" title="keyword">Global Hint Resolve</span> <span class="id" title="var">Dec_auto</span> <span class="id" title="var">Dec_auto_not</span> : <span class="id" title="var">core</span>.<br/>
-<span class="id" title="keyword">Global Hint Extern</span> 4 =&gt;  <br/>
+<span class="id" title="keyword">Global Hint Extern</span> 4 =&gt;  <span class="comment">(*&nbsp;Improves&nbsp;type&nbsp;class&nbsp;inference&nbsp;*)</span><br/>
 <span class="id" title="keyword">match</span> <span class="id" title="keyword">goal</span> <span class="id" title="keyword">with</span><br/>
 &nbsp;&nbsp;| [  |- <a class="idref" href="SyntheticComputability.Shared.Libs.PSL.EqDec.html#dec"><span class="id" title="class">dec</span></a> ((<span class="id" title="keyword">fun</span> <span class="id" title="var">_</span> =&gt; <span class="id" title="var">_</span>) <span class="id" title="var">_</span>) ] =&gt; <span class="id" title="var">cbn</span><br/>
 <span class="id" title="keyword">end</span> : <span class="id" title="var">typeclass_instances</span>.<br/>
@@ -122,6 +121,7 @@
 <span class="id" title="keyword">end</span> : <span class="id" title="var">core</span>.<br/>
 
 <br/>
+<span class="comment">(*&nbsp;Decided&nbsp;propositions&nbsp;behave&nbsp;classically&nbsp;*)</span><br/>
 
 <br/>
 <span class="id" title="keyword">Lemma</span> <a id="dec_DN" class="idref" href="#dec_DN"><span class="id" title="lemma">dec_DN</span></a> <a id="X:24" class="idref" href="#X:24"><span class="id" title="binder">X</span></a> : <br/>
@@ -145,6 +145,7 @@
 <span class="id" title="keyword">Qed</span>.<br/>
 
 <br/>
+<span class="comment">(*&nbsp;Propagation&nbsp;rules&nbsp;for&nbsp;decisions&nbsp;*)</span><br/>
 
 <br/>
 <span class="id" title="keyword">Fact</span> <a id="dec_transfer" class="idref" href="#dec_transfer"><span class="id" title="lemma">dec_transfer</span></a> <a id="P:29" class="idref" href="#P:29"><span class="id" title="binder">P</span></a> <a id="Q:30" class="idref" href="#Q:30"><span class="id" title="binder">Q</span></a> :<br/>
@@ -196,6 +197,8 @@
 <span class="id" title="keyword">Defined</span>.<br/>
 
 <br/>
+<span class="comment">(*&nbsp;Coq&nbsp;standard&nbsp;modules&nbsp;make&nbsp;"not"&nbsp;and&nbsp;"iff"&nbsp;opaque&nbsp;for&nbsp;type&nbsp;class&nbsp;inference,&nbsp;<br/>
+&nbsp;&nbsp;&nbsp;can&nbsp;be&nbsp;seen&nbsp;with&nbsp;Print&nbsp;HintDb&nbsp;typeclass_instances.&nbsp;*)</span><br/>
 
 <br/>
 <span class="id" title="keyword">Global Instance</span> <a id="not_dec" class="idref" href="#not_dec"><span class="id" title="instance">not_dec</span></a> (<a id="X:38" class="idref" href="#X:38"><span class="id" title="binder">X</span></a> : <span class="id" title="keyword">Prop</span>) : <br/>
@@ -212,6 +215,7 @@
 <span class="id" title="keyword">Defined</span>.<br/>
 
 <br/>
+<span class="comment">(*&nbsp;**&nbsp;Discrete&nbsp;types&nbsp;*)</span><br/>
 
 <br/>
 <span class="id" title="keyword">Notation</span> <a id=":::'eq_dec'_x" class="idref" href="#:::'eq_dec'_x"><span class="id" title="notation">&quot;</span></a>'eq_dec' X" := (<span class="id" title="keyword">forall</span> <a id="x:41" class="idref" href="#x:41"><span class="id" title="binder">x</span></a> <a id="y:42" class="idref" href="#y:42"><span class="id" title="binder">y</span></a> : <span class="id" title="var">X</span>, <a class="idref" href="SyntheticComputability.Shared.Libs.PSL.EqDec.html#dec"><span class="id" title="class">dec</span></a> (<a class="idref" href="SyntheticComputability.Shared.Libs.PSL.EqDec.html#x:41"><span class="id" title="variable">x</span></a><a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Logic.html#6cd0f7b28b6092304087c7049437bb1a"><span class="id" title="notation">=</span></a><a class="idref" href="SyntheticComputability.Shared.Libs.PSL.EqDec.html#y:42"><span class="id" title="variable">y</span></a>)) (<span class="id" title="tactic">at</span> <span class="id" title="keyword">level</span> 70).<br/>
@@ -233,6 +237,7 @@
 <span class="id" title="keyword">Global Existing Instance</span> <span class="id" title="var">eqType_dec</span>.<br/>
 
 <br/>
+<span class="comment">(*&nbsp;Print&nbsp;the&nbsp;base&nbsp;type&nbsp;of&nbsp;<span class="inlinecode"><span class="id" title="var">eqType</span></span>&nbsp;in&nbsp;the&nbsp;Canonical&nbsp;Structure.&nbsp;*)</span><br/>
 <span class="id" title="keyword">Arguments</span> <a class="idref" href="SyntheticComputability.Shared.Libs.PSL.EqDec.html#eqType_CS"><span class="id" title="definition">eqType_CS</span></a> (<span class="id" title="var">X</span>) {<span class="id" title="var">_</span>}.<br/>
 
 <br/>
