--- a/oracle-computability/SyntheticComputability.Shared.Libs.PSL.Lists.Filter.html
+++ b/oracle-computability/SyntheticComputability.Shared.Libs.PSL.Lists.Filter.html
@@ -25,12 +25,11 @@
 </div>
     <div id="content" tabindex="-1" onblur="document.getElementById('content').focus()">
     <div id="main">
-<h1 class="libtitle">Library SyntheticComputability.Shared.Libs.PSL.Lists.Filter</h1>
-
 <div class="code">
 <span class="id" title="keyword">From</span> <span class="id" title="var">SyntheticComputability.Shared.Libs.PSL</span> <span class="id" title="keyword">Require</span> <span class="id" title="keyword">Import</span> <a class="idref" href="SyntheticComputability.Shared.Libs.PSL.Lists.BaseLists.html#"><span class="id" title="library">BaseLists</span></a>.<br/>
 
 <br/>
+<span class="comment">(*&nbsp;***&nbsp;Filter&nbsp;*)</span><br/>
 
 <br/>
 <span class="id" title="keyword">Section</span> <a id="Filter" class="idref" href="#Filter"><span class="id" title="section">Filter</span></a>.<br/>
@@ -38,6 +37,11 @@
 &nbsp;&nbsp;<span class="id" title="keyword">Implicit</span> <span class="id" title="keyword">Types</span> (<span class="id" title="var">x</span> <span class="id" title="var">y</span>: <a class="idref" href="SyntheticComputability.Shared.Libs.PSL.Lists.Filter.html#Filter.X"><span class="id" title="variable">X</span></a>) (<span class="id" title="var">A</span> <span class="id" title="var">B</span> <span class="id" title="var">C</span>: <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Datatypes.html#list"><span class="id" title="inductive">list</span></a> <a class="idref" href="SyntheticComputability.Shared.Libs.PSL.Lists.Filter.html#Filter.X"><span class="id" title="variable">X</span></a>) (<span class="id" title="var">p</span> <span class="id" title="var">q</span>: <a class="idref" href="SyntheticComputability.Shared.Libs.PSL.Lists.Filter.html#Filter.X"><span class="id" title="variable">X</span></a> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Logic.html#::type_scope:x_'-&gt;'_x"><span class="id" title="notation">-&gt;</span></a> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Datatypes.html#bool"><span class="id" title="inductive">bool</span></a>).<br/>
 
 <br/>
+&nbsp;&nbsp;<span class="comment">(*&nbsp;Fixpoint&nbsp;filter&nbsp;p&nbsp;A&nbsp;:&nbsp;list&nbsp;X&nbsp;:=&nbsp;*)</span><br/>
+&nbsp;&nbsp;<span class="comment">(*&nbsp;&nbsp;&nbsp;match&nbsp;A&nbsp;with&nbsp;*)</span><br/>
+&nbsp;&nbsp;<span class="comment">(*&nbsp;&nbsp;&nbsp;|&nbsp;nil&nbsp;=&gt;&nbsp;nil&nbsp;*)</span><br/>
+&nbsp;&nbsp;<span class="comment">(*&nbsp;&nbsp;&nbsp;|&nbsp;x::A'&nbsp;=&gt;&nbsp;if&nbsp;p&nbsp;x&nbsp;then&nbsp;x&nbsp;::&nbsp;filter&nbsp;p&nbsp;A'&nbsp;else&nbsp;filter&nbsp;p&nbsp;A'&nbsp;*)</span><br/>
+&nbsp;&nbsp;<span class="comment">(*&nbsp;&nbsp;&nbsp;end.&nbsp;*)</span><br/>
 
 <br/>
 &nbsp;&nbsp;<span class="id" title="keyword">Lemma</span> <a id="in_filter_iff" class="idref" href="#in_filter_iff"><span class="id" title="lemma">in_filter_iff</span></a> <a id="x:2" class="idref" href="#x:2"><span class="id" title="binder">x</span></a> <a id="p:3" class="idref" href="#p:3"><span class="id" title="binder">p</span></a> <a id="A:4" class="idref" href="#A:4"><span class="id" title="binder">A</span></a> :<br/>
