--- a/oracle-computability/SyntheticComputability.Shared.Libs.PSL.Lists.Removal.html
+++ b/oracle-computability/SyntheticComputability.Shared.Libs.PSL.Lists.Removal.html
@@ -25,12 +25,11 @@
 </div>
     <div id="content" tabindex="-1" onblur="document.getElementById('content').focus()">
     <div id="main">
-<h1 class="libtitle">Library SyntheticComputability.Shared.Libs.PSL.Lists.Removal</h1>
-
 <div class="code">
 <span class="id" title="keyword">From</span> <span class="id" title="var">SyntheticComputability.Shared.Libs.PSL</span> <span class="id" title="keyword">Require</span> <span class="id" title="keyword">Export</span> <a class="idref" href="SyntheticComputability.Shared.Libs.PSL.Lists.BaseLists.html#"><span class="id" title="library">BaseLists</span></a> <a class="idref" href="SyntheticComputability.Shared.Libs.PSL.Lists.Filter.html#"><span class="id" title="library">Filter</span></a>.<br/>
 
 <br/>
+<span class="comment">(*&nbsp;***&nbsp;Element&nbsp;removal&nbsp;*)</span><br/>
 
 <br/>
 <span class="id" title="keyword">Section</span> <a id="Removal" class="idref" href="#Removal"><span class="id" title="section">Removal</span></a>.<br/>
