--- a/oracle-computability/SyntheticComputability.Shared.Libs.PSL.Tactics.Tactics.html
+++ b/oracle-computability/SyntheticComputability.Shared.Libs.PSL.Tactics.Tactics.html
@@ -25,14 +25,14 @@
 </div>
     <div id="content" tabindex="-1" onblur="document.getElementById('content').focus()">
     <div id="main">
-<h1 class="libtitle">Library SyntheticComputability.Shared.Libs.PSL.Tactics.Tactics</h1>
-
 <div class="code">
+<span class="comment">(*&nbsp;**&nbsp;Inversion&nbsp;*)</span><br/>
 
 <br/>
 <span class="id" title="keyword">Ltac</span> <span class="id" title="var">inv</span> <span class="id" title="var">H</span> := <span class="id" title="tactic">inversion</span> <span class="id" title="var">H</span>; <span class="id" title="tactic">subst</span>; <span class="id" title="tactic">try</span> <span class="id" title="tactic">clear</span> <span class="id" title="var">H</span>.<br/>
 
 <br/>
+<span class="comment">(*&nbsp;**&nbsp;Destructing&nbsp;*)</span><br/>
 
 <br/>
 <span class="id" title="keyword">Tactic Notation</span> "destruct" "_":=<br/>
@@ -66,6 +66,7 @@
 <span class="id" title="keyword">Ltac</span> <span class="id" title="var">fstep</span> <span class="id" title="var">N</span> := <span class="id" title="tactic">unfold</span> <span class="id" title="var">N</span>; <span class="id" title="tactic">fold</span> <span class="id" title="var">N</span>.<br/>
 
 <br/>
+<span class="comment">(*&nbsp;From&nbsp;Program.Tactics&nbsp;*)</span><br/>
 <span class="id" title="keyword">Ltac</span> <span class="id" title="var">destruct_one_pair</span> :=<br/>
 &nbsp;<span class="id" title="keyword">match</span> <span class="id" title="keyword">goal</span> <span class="id" title="keyword">with</span><br/>
 &nbsp;&nbsp;&nbsp;| [<span class="id" title="var">H</span> : (<span class="id" title="var">_</span> <a class="idref" href="http://coq.inria.fr/distrib/V8.17.0/stdlib//Coq.Init.Logic.html#ba2b0e492d2b4675a0acf3ea92aabadd"><span class="id" title="notation">/\</span></a> <span class="id" title="var">_</span>) |- <span class="id" title="var">_</span>] =&gt; <span class="id" title="tactic">destruct</span> <span class="id" title="var">H</span><br/>
@@ -76,8 +77,10 @@
 <span class="id" title="keyword">Ltac</span> <span class="id" title="var">destruct_pairs</span> := <span class="id" title="tactic">repeat</span> (<span class="id" title="var">destruct_one_pair</span>).<br/>
 
 <br/>
+<span class="comment">(*&nbsp;**&nbsp;Assumption&nbsp;Locking&nbsp;*)</span><br/>
 
 <br/>
+<span class="comment">(*&nbsp;<span class="inlinecode"><span class="id" title="var">lock</span></span> <span class="inlinecode"><span class="id" title="var">H</span></span>&nbsp;"locks"&nbsp;the&nbsp;goal&nbsp;<span class="inlinecode"><span class="id" title="var">H</span></span>,&nbsp;which&nbsp;syntactically&nbsp;adds&nbsp;<span class="inlinecode"><span class="id" title="var">Lock</span></span>,&nbsp;but&nbsp;it&nbsp;doesn't&nbsp;change&nbsp;the&nbsp;proof&nbsp;script.&nbsp;*)</span><br/>
 
 <br/>
 <span class="id" title="keyword">Definition</span> <a id="Lock" class="idref" href="#Lock"><span class="id" title="definition">Lock</span></a> (<a id="X:1" class="idref" href="#X:1"><span class="id" title="binder">X</span></a>: <span class="id" title="keyword">Type</span>) : <span class="id" title="keyword">Type</span> := <a class="idref" href="SyntheticComputability.Shared.Libs.PSL.Tactics.Tactics.html#X:1"><span class="id" title="variable">X</span></a>.<br/>
@@ -116,10 +119,32 @@
 &nbsp;&nbsp;<span class="id" title="keyword">end</span>.<br/>
 
 <br/>
+<span class="comment">(*<br/>
+Goal&nbsp;True.<br/>
+&nbsp;&nbsp;do&nbsp;2&nbsp;pose&nbsp;proof&nbsp;I.<br/>
+&nbsp;&nbsp;lock&nbsp;H.<br/>
+&nbsp;&nbsp;lock&nbsp;H0.<br/>
+&nbsp;&nbsp;unlock&nbsp;H0.<br/>
+&nbsp;&nbsp;do&nbsp;2&nbsp;pose&nbsp;proof&nbsp;I.<br/>
+&nbsp;&nbsp;lock&nbsp;H0;&nbsp;lock&nbsp;H1.<br/>
+&nbsp;&nbsp;unlock&nbsp;all.<br/>
+<br/>
+&nbsp;&nbsp;is_unlocked&nbsp;H.<br/>
+&nbsp;&nbsp;Fail&nbsp;is_locked&nbsp;H.<br/>
+<br/>
+&nbsp;&nbsp;lock&nbsp;H.<br/>
+&nbsp;&nbsp;is_locked&nbsp;H.<br/>
+&nbsp;&nbsp;Fail&nbsp;is_unlocked&nbsp;H.<br/>
+<br/>
+&nbsp;&nbsp;Show&nbsp;Proof.&nbsp;<span class="comment">(*&nbsp;Locking&nbsp;and&nbsp;unlocking&nbsp;is&nbsp;not&nbsp;represented&nbsp;in&nbsp;the&nbsp;proof&nbsp;term.&nbsp;*)</span><br/>
+Abort.<br/>
+*)</span><br/>
 
 <br/>
+<span class="comment">(*&nbsp;**&nbsp;Modus&nbsp;ponens&nbsp;*)</span><br/>
 
 <br/>
+<span class="comment">(*&nbsp;Prove&nbsp;the&nbsp;non-dependent&nbsp;hypothesis&nbsp;of&nbsp;a&nbsp;hypothesis&nbsp;that&nbsp;is&nbsp;a&nbsp;implication&nbsp;and&nbsp;specialize&nbsp;it&nbsp;*)</span><br/>
 <span class="id" title="keyword">Tactic Notation</span> "spec_assert" <span class="id" title="var">hyp</span>(<span class="id" title="var">H</span>) :=<br/>
 &nbsp;&nbsp;<span class="id" title="keyword">let</span> <span class="id" title="var">H'</span> := <span class="id" title="tactic">fresh</span> <span class="id" title="tactic">in</span><br/>
 &nbsp;&nbsp;<span class="id" title="keyword">match</span> <span class="id" title="keyword">type</span> <span class="id" title="keyword">of</span> <span class="id" title="var">H</span> <span class="id" title="keyword">with</span><br/>
@@ -152,6 +177,7 @@
 &nbsp;&nbsp;<span class="id" title="keyword">end</span>.<br/>
 
 <br/>
+<span class="comment">(*&nbsp;**&nbsp;Some&nbsp;debug&nbsp;tactics&nbsp;*)</span><br/>
 
 <br/>
 <span class="id" title="keyword">Ltac</span> <span class="id" title="var">print_goal</span> :=<br/>
