--- a/oracle-computability/SyntheticComputability.Synthetic.EnumerabilityFacts.html
+++ b/oracle-computability/SyntheticComputability.Synthetic.EnumerabilityFacts.html
@@ -25,8 +25,6 @@
 </div>
     <div id="content" tabindex="-1" onblur="document.getElementById('content').focus()">
     <div id="main">
-<h1 class="libtitle">Library SyntheticComputability.Synthetic.EnumerabilityFacts</h1>
-
 <div class="code">
 <span class="id" title="keyword">From</span> <span class="id" title="var">SyntheticComputability.Synthetic</span> <span class="id" title="keyword">Require</span> <span class="id" title="keyword">Import</span> <a class="idref" href="SyntheticComputability.Synthetic.DecidabilityFacts.html#"><span class="id" title="library">DecidabilityFacts</span></a>.<br/>
 <span class="id" title="keyword">From</span> <span class="id" title="var">SyntheticComputability.Shared</span> <span class="id" title="keyword">Require</span> <span class="id" title="keyword">Export</span> <a class="idref" href="SyntheticComputability.Shared.embed_nat.html#"><span class="id" title="library">embed_nat</span></a> <a class="idref" href="SyntheticComputability.Shared.equiv_on.html#"><span class="id" title="library">equiv_on</span></a> <a class="idref" href="SyntheticComputability.Shared.partial.html#"><span class="id" title="library">partial</span></a> <a class="idref" href="SyntheticComputability.Shared.mu_nat.html#"><span class="id" title="library">mu_nat</span></a> <a class="idref" href="SyntheticComputability.Shared.Dec.html#"><span class="id" title="library">Dec</span></a>.<br/>
@@ -720,6 +718,7 @@ Type classes
 
 <br/>
 <span class="id" title="keyword">Existing Class</span> <span class="id" title="var">enumerator</span>ᵗ'.<br/>
+<span class="comment">(*&nbsp;Existing&nbsp;Class&nbsp;enumerableᵗ.&nbsp;*)</span><br/>
 
 <br/>
 <span class="id" title="keyword">Lemma</span> <a id="enumerator_enumerable" class="idref" href="#enumerator_enumerable"><span class="id" title="lemma">enumerator_enumerable</span></a> {<a id="X:362" class="idref" href="#X:362"><span class="id" title="binder">X</span></a>} {<a id="f:363" class="idref" href="#f:363"><span class="id" title="binder">f</span></a>} :<br/>
@@ -753,6 +752,70 @@ Type classes
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;* <span class="id" title="tactic">eauto</span>.<br/>
 &nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;* <span class="id" title="tactic">exists</span> <span class="id" title="var">x</span>. <span class="id" title="tactic">inversion</span> <span class="id" title="var">H0</span>. <span class="id" title="tactic">subst</span>. <span class="id" title="tactic">eauto</span>.<br/>
 <span class="id" title="keyword">Qed</span>.<br/>
+<span class="comment">(*&nbsp;<br/>
+Require&nbsp;Import&nbsp;SyntheticComputability.Shared.Dec&nbsp;SyntheticComputability.Shared.Pigeonhole.<br/>
+<br/>
+Section&nbsp;cantor_infinite.<br/>
+<br/>
+&nbsp;&nbsp;Variable&nbsp;X&nbsp;:&nbsp;Type.<br/>
+&nbsp;&nbsp;Variable&nbsp;E&nbsp;:&nbsp;eq_dec&nbsp;X.<br/>
+&nbsp;&nbsp;Variable&nbsp;p&nbsp;:&nbsp;X&nbsp;-&gt;&nbsp;Prop.<br/>
+<br/>
+&nbsp;&nbsp;Variables&nbsp;(e&nbsp;:&nbsp;_&nbsp;)&nbsp;(He&nbsp;:&nbsp;enumerator&nbsp;e&nbsp;p).<br/>
+<br/>
+&nbsp;&nbsp;Variable&nbsp;G&nbsp;:&nbsp;generative&nbsp;p.<br/>
+<br/>
+&nbsp;&nbsp;Definition&nbsp;nxt'&nbsp;l&nbsp;:&nbsp;{n&nbsp;|&nbsp;least&nbsp;(fun&nbsp;n&nbsp;=&gt;&nbsp;exists&nbsp;x,&nbsp;e&nbsp;n&nbsp;=&nbsp;Some&nbsp;x&nbsp;/\&nbsp;~&nbsp;In&nbsp;x&nbsp;l)&nbsp;0&nbsp;n}.<br/>
+&nbsp;&nbsp;Proof.<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;eapply&nbsp;mu_nat_dep_least.<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;intros&nbsp;n.&nbsp;destruct&nbsp;(e&nbsp;n)&nbsp;as&nbsp;<span class="inlinecode"><span class="id" title="var">x</span></span> <span class="inlinecode">|</span> <span class="inlinecode"></span>.&nbsp;<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+&nbsp;decide&nbsp;(In&nbsp;x&nbsp;l);&nbsp;firstorder&nbsp;congruence.<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;&nbsp;+&nbsp;firstorder&nbsp;congruence.<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;destruct&nbsp;(G&nbsp;l)&nbsp;as&nbsp;(x&nbsp;&amp;&nbsp;<span class="inlinecode"><span class="id" title="var">n</span></span> <span class="inlinecode"><span class="id" title="var">H1</span></span>&nbsp;&nbsp;in_app_iff;&nbsp;eauto.<br/>
+&nbsp;&nbsp;Qed.<br/>
+<br/>
+&nbsp;&nbsp;Lemma&nbsp;F_inn&nbsp;n&nbsp;x&nbsp;&nbsp;:&nbsp;e&nbsp;n&nbsp;=&nbsp;Some&nbsp;x&nbsp;-&gt;&nbsp;In&nbsp;x&nbsp;(generate&nbsp;nxt&nbsp;(S&nbsp;n)).<br/>
+&nbsp;&nbsp;Proof.<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;revert&nbsp;x.&nbsp;induction&nbsp;n&nbsp;as&nbsp;<span class="inlinecode"><span class="id" title="var">n</span></span> <span class="inlinecode"><span class="id" title="var">IH</span></span>&nbsp;using&nbsp;Wf_nat.lt_wf_ind.<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;intros&nbsp;x&nbsp;H.&nbsp;cbn.&nbsp;eapply&nbsp;in_app_iff.<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;decide&nbsp;(In&nbsp;x&nbsp;(generate&nbsp;nxt&nbsp;n));&nbsp;eauto.&nbsp;<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;right.&nbsp;left.&nbsp;unfold&nbsp;nxt&nbsp;at&nbsp;1.<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;destruct&nbsp;nxt'&nbsp;as&nbsp;(n'&nbsp;&amp;&nbsp;H1&nbsp;&amp;&nbsp;H2&nbsp;&amp;&nbsp;H3).&nbsp;cbn&nbsp;-<span class="inlinecode"><span class="id" title="var">generate</span></span>&nbsp;in&nbsp;*.<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;destruct&nbsp;(e&nbsp;n')&nbsp;as&nbsp;<span class="inlinecode"><span class="id" title="var">x'</span></span> <span class="inlinecode">|</span> <span class="inlinecode"></span>&nbsp;eqn:Eq.<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;2:&nbsp;exfalso;&nbsp;firstorder&nbsp;congruence.<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;destruct&nbsp;H2&nbsp;as&nbsp;(?&nbsp;&amp;&nbsp;<span class="inlinecode">=</span> <span class="inlinecode">&lt;-</span>&nbsp;&amp;&nbsp;H2).<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;assert&nbsp;(n'&nbsp;&lt;=&nbsp;n).&nbsp;{&nbsp;eapply&nbsp;H3;&nbsp;try&nbsp;split;&nbsp;eauto.&nbsp;lia.&nbsp;}<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;assert&nbsp;(n'&nbsp;=&nbsp;n&nbsp;\/&nbsp;n'&nbsp;&lt;&nbsp;n)&nbsp;as&nbsp;<span class="inlinecode">-&gt;</span> <span class="inlinecode">|</span> <span class="inlinecode"></span>&nbsp;by&nbsp;lia;&nbsp;try&nbsp;congruence.<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;exfalso.&nbsp;eapply&nbsp;H2.<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;eapply&nbsp;generative_is_prefix;&nbsp;eauto.<br/>
+&nbsp;&nbsp;Qed.<br/>
+<br/>
+&nbsp;&nbsp;Lemma&nbsp;F_spec&nbsp;x&nbsp;:&nbsp;p&nbsp;x&nbsp;&lt;-&gt;&nbsp;exists&nbsp;n,&nbsp;F&nbsp;n&nbsp;=&nbsp;x.<br/>
+&nbsp;&nbsp;Proof.<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;split.<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;-&nbsp;intros&nbsp;<span class="inlinecode"><span class="id" title="var">n</span></span> <span class="inlinecode"><span class="id" title="var">H</span></span>&nbsp;&nbsp;F_lt.&nbsp;rewrite&nbsp;H1&nbsp;in&nbsp;H2.&nbsp;apply&nbsp;(F_nel&nbsp;H2).<br/>
+&nbsp;&nbsp;Qed.<br/>
+<br/>
+&nbsp;&nbsp;Lemma&nbsp;injective_F&nbsp;n1&nbsp;n2&nbsp;:&nbsp;F&nbsp;n1&nbsp;=&nbsp;F&nbsp;n2&nbsp;-&gt;&nbsp;n1&nbsp;=&nbsp;n2.<br/>
+&nbsp;&nbsp;Proof.<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;unfold&nbsp;F.&nbsp;unfold&nbsp;nxt&nbsp;at&nbsp;1&nbsp;3.<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;destruct&nbsp;nxt'&nbsp;as&nbsp;(n&nbsp;&amp;&nbsp;H1&nbsp;&amp;&nbsp;H2&nbsp;&amp;&nbsp;H3)&nbsp;eqn:E1.&nbsp;cbn&nbsp;in&nbsp;*.<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;destruct&nbsp;(nxt'&nbsp;(generate&nbsp;nxt&nbsp;n2))&nbsp;as&nbsp;(n'&nbsp;&amp;&nbsp;H1'&nbsp;&amp;&nbsp;H2'&nbsp;&amp;&nbsp;H3')&nbsp;eqn:E2.&nbsp;cbn&nbsp;in&nbsp;*.<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;eapply&nbsp;(f_equal&nbsp;proj1_sig)&nbsp;in&nbsp;E1.&nbsp;eapply&nbsp;(f_equal&nbsp;proj1_sig)&nbsp;in&nbsp;E2.&nbsp;cbn&nbsp;in&nbsp;*.&nbsp;<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;destruct&nbsp;(e&nbsp;n)&nbsp;as&nbsp;<span class="inlinecode"><span class="id" title="var">x</span></span> <span class="inlinecode">|</span> <span class="inlinecode"></span>.&nbsp;2:&nbsp;exfalso;&nbsp;firstorder&nbsp;congruence.<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;destruct&nbsp;(e&nbsp;n')&nbsp;as&nbsp;<span class="inlinecode"><span class="id" title="var">x'</span></span> <span class="inlinecode">|</span> <span class="inlinecode"></span>.&nbsp;2:&nbsp;exfalso;&nbsp;firstorder&nbsp;congruence.<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;destruct&nbsp;H2&nbsp;as&nbsp;(?&nbsp;&amp;&nbsp;<span class="inlinecode">=</span> <span class="inlinecode">&lt;-</span>&nbsp;&amp;&nbsp;H2).&nbsp;destruct&nbsp;H2'&nbsp;as&nbsp;(?&nbsp;&amp;&nbsp;<span class="inlinecode">=</span> <span class="inlinecode">&lt;-</span>&nbsp;&amp;&nbsp;H2').<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;intros&nbsp;&lt;-.<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;assert&nbsp;(n1&nbsp;&lt;&nbsp;n2&nbsp;\/&nbsp;n1&nbsp;=&nbsp;n2&nbsp;\/&nbsp;n2&nbsp;&lt;&nbsp;n1)&nbsp;as&nbsp;<span class="inlinecode"><span class="id" title="var">Hl</span></span> <span class="inlinecode">|</span> <span class="inlinecode">[<span class="id" title="var">Hl</span></span> <span class="inlinecode">|</span> <span class="inlinecode"><span class="id" title="var">Hl</span>]</span>&nbsp;by&nbsp;lia;&nbsp;eauto;&nbsp;exfalso.<br/>
+&nbsp;&nbsp;&nbsp;&nbsp;-<br/>
+<br/>
+<br/>
+&nbsp;&nbsp;<br/>
+<br/>
+<br/>
+<br/>
+End&nbsp;cantor_infinite.<br/>
+&nbsp;*)</span><br/>
 </div>
 </div>
 <div id="footer">
